# very-basic-nuopc-example

./: .gitignore  CMakeLists.txt  README.md  config.nml  justfile  model.f90  my_model.f90
.github/workflows/: ci.yml
nuopc-single-model-driver/: CMakeLists.txt  app.F90  cap.F90  driver.F90
standalone-driver/: CMakeLists.txt  standalone-driver.f90
